# markdowntopdf-notes-system

./: .gitignore  README.md  convert_md_to_pdf.py  example.md  mermaid-config.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
markdown_to_pdf/: converter.py  ebook_converter.py
