[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "markdown-to-pdf"
version = "0.3.0"
description = "Convert markdown files to PDF, EPUB, or MOBI format with Mermaid and PlantUML support"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Markdown to PDF Converter"}
]
keywords = ["markdown", "pdf", "epub", "mobi", "converter", "mermaid", "plantuml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]

dependencies = [
    "playwright>=1.40.0",
    "plantuml>=0.3.0",
    "colorama>=0.4.6",
    "six>=1.16.0",
    "Pillow>=10.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.scripts]
md2pdf = "markdown_to_pdf.converter:main"
md2ebook = "markdown_to_pdf.ebook_converter:main"

[project.urls]
Homepage = "https://github.com/yourusername/markdown-to-pdf"
Documentation = "https://github.com/yourusername/markdown-to-pdf"
Repository = "https://github.com/yourusername/markdown-to-pdf"
